crates/quaffed/tests/snapshots/end_to_end__each_construct_not_built_yet_exits_5_naming_it.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find `f($a)`"
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 6: a structural pattern - a backticked operand - is not built yet
