crates/quaffed/tests/snapshots/end_to_end__each_construct_outside_the_mvp_exits_5_naming_it-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - expect 1
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 1: unknown statement: a standalone `expect` is not in this build; put the expect on the find it counts, as find "TODO" expect none
