crates/quaffed/tests/snapshots/end_to_end__each_construct_outside_the_mvp_exits_5_naming_it-5.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find `f($a)` as call"
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 14: unknown construct: the `as` clause is not in this build
