crates/quaffed/tests/snapshots/end_to_end__each_construct_outside_the_mvp_exits_5_naming_it.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-f"
    - scripts/unknown.quaff
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: scripts/unknown.quaff:3:1: unknown statement: `insert` is not in this build
