crates/quaffed/tests/snapshots/end_to_end__each_malformed_script_exits_3_naming_where-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-f"
    - scripts/bad.quaff
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: scripts/bad.quaff:2:19: `in` cannot follow `expect`: clauses come in the order in, where, expect
