crates/quaffed/tests/snapshots/end_to_end__each_malformed_script_exits_3_naming_where-5.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "replace string \"a\" with \"b\""
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 1: an edit needs an expect clause saying how many it should change - `expect 1`, or `expect any` to opt out
