crates/quaffed/tests/snapshots/end_to_end__each_usage_error_exits_3_saying_what_to_do-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-s"
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: "-s" needs a value: the text to search for
